--- a/Form.html
+++ b/Form.html
@@ -4,15 +4,18 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="CSSFile.CSS" rel="stylesheet">
-    <section id="friend">
-        <form>
-            <label for="name">Name</label>
-            <input type="text" id="name" name="name"><br>
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email"><br>
-            <label for="cool">What makes you cool enough to be a friend of Ethan?</label><br>
-            <textarea id="cool" name="cool" rows="10" cols="50"></textarea><br>
-            <button type="submit">Best Decision You've Ever Made</button>
-        </form>
-    </section>
+    </head>
+    <body id="form">
+        <section id="friend">
+            <form>
+                <label for="name">Name</label>
+                <input type="text" id="name" name="name"><br>
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email"><br>
+                <label for="cool">What makes you cool enough to be a friend of Ethan?</label><br>
+                <textarea id="cool" name="cool" rows="10" cols="50"></textarea><br>
+                <button type="submit">Best Decision You've Ever Made</button>
+            </form>
+        </section>
+    </body>
 </html>
