Work for submission

--- a/Form.html
+++ b/Form.html
@@ -14,7 +14,7 @@
                 <input type="email" id="email" name="email"><br>
                 <label for="cool">What makes you cool enough to be a friend of Ethan?</label><br>
                 <textarea id="cool" name="cool" rows="10" cols="50"></textarea><br>
-                <button type="submit">Best Decision You've Ever Made</button>
+                <button type="submit" id="submit1">Best Decision You've Ever Made</button>
             </form>
         </section>
     </body>
