--- a/HTMLFile.html
+++ b/HTMLFile.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="CSSFile.CSS" rel="stylesheet">
+    <script src="JSFile.JS"></script>
    </head>
    <header>
     <nav>
@@ -34,7 +35,9 @@
             <li>Mentoring and providing a learning road map for Spanish to a former colleague</li> 
             <li><strong>Looking after the handsomest Yorkie who thinks he's an XL Bully - Ted</strong>></li>  
          </ul>
-         <!--Will add a picture of Ted somewhere around here-->
+         <div>
+            <img src="IMG_9878.jpeg" alt="Ted">
+         </div>
     </section>
     <section id="experience">
         <h3>Work Experience</h3>
@@ -65,7 +68,7 @@
                 I suggested the implementation of an Applicant Tracking System to the Managing Director. This freed up time for employees to focus on Business Development, and increasing revenues to exceed set targets, while increasing client satisfaction.When taking over from an employee on Maternity leave, I lead projects and managed large consultancy clients across the EU and became their go-to point of contact through rapport building and being highly responsive, both during work hours and out of regular hours.
             </td>
             <td>
-                06/21- 09/22
+                06/21 - 09/22
             </td>
         </tr>
         <tr>
@@ -76,8 +79,11 @@
                 When starting in this role, I followed strict codes and guidelines to clean the clinic used in active drug testing, to ensure large first stage trials were able to go-ahead smoothly and keep patients comfortable.
                 This role also allowed me to further skills in networking and being point of contact from patients taking part in trials, up to managing directors of the Clinic and quickly building a rapport through common ground.                 
             </td>
+            <td>
+
+            </td>
         </tr>
-        </table>
+        </table>09/19 - 06/21
     </section>
 <footer>
     <section id="contact">
