--- a/HTMLFile.html
+++ b/HTMLFile.html
@@ -80,10 +80,10 @@
                 This role also allowed me to further skills in networking and being point of contact from patients taking part in trials, up to managing directors of the Clinic and quickly building a rapport through common ground.                 
             </td>
             <td>
-
+                09/19 - 06/21
             </td>
         </tr>
-        </table>09/19 - 06/21
+        </table>
     </section>
 <footer>
     <section id="contact">
