--- a/Form.html
+++ b/Form.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="CSSFile.CSS" rel="stylesheet">
+        <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
         <script src="JSFile.JS"></script>
     </head>
     <body id="form">
